--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -2,12 +2,14 @@
 .contact_form{
 	display: flex;
     flex-direction: column;
+    width: 50%;
+    margin: auto;
 }
 
 .form_group{
 	display: flex;
     flex-direction: column;
-    width: fit-content;
+    width: 100%;
     margin: 1rem 0px;
 
 	*{
@@ -40,4 +42,8 @@
 		padding: 0.6rem;
 		background: #eeeeee;
 	}
+}
+
+form input[type=checkbox]{
+	margin: 0 0.5rem 0 0;
 }
